force-app/main/default/objects/Address_History__c/fields/Date_From__c.field-meta.xml
<CustomField>
    <fullName>Date_From__c</fullName>
    <label>Date From</label>
    <type>Date</type>
</CustomField>